--- a/.github/workflows/azure-webapps-java-jar.yml
+++ b/.github/workflows/azure-webapps-java-jar.yml
@@ -20,9 +20,9 @@
 name: Build and deploy JAR app to Azure Web App
 
 env:
-  AZURE_WEBAPP_NAME: spending-tracker    # set this to the name of your Azure Web App
-  JAVA_VERSION: '11'                  # set this to the Java version to use
-  DISTRIBUTION: temurin                  # set this to the Java distribution
+  AZURE_WEBAPP_NAME: expense-tracker    # set this to the name of your Azure Web App
+  JAVA_VERSION: '17'                  # set this to the Java version to use
+  DISTRIBUTION: temurin              # set this to the Java distribution
 
 on:
   push:
